--- a/ForumNew/ForumNew.WEB/Views/Home/Contact.cshtml
+++ b/ForumNew/ForumNew.WEB/Views/Home/Contact.cshtml
@@ -5,13 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <p>
+        Ukraine<br />
+        Mykolaiv<br />
+    </p>
+    <p>
+        <strong>Admin:</strong>   <a href="mailto:yuriy.lazar1986@gmail.com">yuriy.lazar1986@gmail.com</a><br />
+    </p>
 </address>
