--- a/ForumNew/ForumNew.WEB/Views/Home/Index.cshtml
+++ b/ForumNew/ForumNew.WEB/Views/Home/Index.cshtml
@@ -1,31 +1,44 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="container-fluid">
+    <br />
+    <input type="button" onclick="location.href='@Url.Action("CreateTheme","Home")'" value="Create theme"
+           class="btn btn-primary" />
+    <div id="themeContainer">
+        @Html.Partial("_ThemePartial")
+    </div>
+    @Ajax.ActionLink("ThemeUpdate", "Index", new { beginThemeUpdate = "" },
+    new AjaxOptions { UpdateTargetId = "themeContainer", OnSuccess = "ThemeOnSuccess"/*, OnBegin = "ThemeOnBegin" */},
+    new { @id = "ThemeUpdate", @style = "visibility:hidden;" })
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+@section scripts
+{
+    @Scripts.Render("~/bundles/unobtrusive-ajax")
+
+    <script type="text/javascript">
+//        var scrollNow;
+
+        $(document).ready(function () {
+            var href = "/Home";
+            // Ajax.ActionLink.
+            $("#ThemeUpdate").attr("href", href).click();
+        });
+
+ //       function ThemeOnBegin() {
+ //           scrollNow = document.documentElement.scrollTop;
+//        }
+
+        function ThemeOnSuccess(result) {
+            // Update field Themes every 45 s.
+            setTimeout("Refresh();", 45000);
+ //           window.scroll(0, scrollNow);
+        }
+
+        function Refresh() {
+            var href = "/Home";
+            $("#ThemeUpdate").attr("href", href).click();
+        }
+    </script>
+}
