--- a/ForumNew/ForumNew.WEB/Views/Home/_MessagePartial.cshtml
+++ b/ForumNew/ForumNew.WEB/Views/Home/_MessagePartial.cshtml
@@ -92,7 +92,8 @@
                 UpdateTargetId = "messageContainer",
                 HttpMethod = FormMethod.Post.ToString(),
                 OnFailure = "alert('Message not sent')",
-                OnSuccess = "MessageOnSuccess"//,
+                OnSuccess = "MessageOnSuccess",
+                OnBegin= "$('#createMessage').hide()"
             }))
             {
                 @Html.AntiForgeryToken()
