--- a/ForumNew/ForumNew.WEB/Views/Home/Index.cshtml
+++ b/ForumNew/ForumNew.WEB/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         @Html.Partial("_ThemePartial")
     </div>
     @Ajax.ActionLink("ThemeUpdate", "Index", new { beginThemeUpdate = "" },
-    new AjaxOptions { UpdateTargetId = "themeContainer", OnSuccess = "ThemeOnSuccess"/*, OnBegin = "ThemeOnBegin" */},
+    new AjaxOptions { UpdateTargetId = "themeContainer", OnSuccess = "ThemeOnSuccess"},
     new { @id = "ThemeUpdate", @style = "visibility:hidden;" })
 </div>
 
@@ -18,7 +18,6 @@
     @Scripts.Render("~/bundles/unobtrusive-ajax")
 
     <script type="text/javascript">
-//        var scrollNow;
 
         $(document).ready(function () {
             var href = "/Home";
@@ -26,14 +25,9 @@
             $("#ThemeUpdate").attr("href", href).click();
         });
 
- //       function ThemeOnBegin() {
- //           scrollNow = document.documentElement.scrollTop;
-//        }
-
         function ThemeOnSuccess(result) {
             // Update field Themes every 45 s.
             setTimeout("Refresh();", 45000);
- //           window.scroll(0, scrollNow);
         }
 
         function Refresh() {
